--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,84 @@
     color: rgb(9, 167, 9);
     font-weight: bold;
 }
+/*Color Testing*/
+
+.textsize{
+    font-size: 40px;
+    margin: 40px;
+    margin-left: 30%;
+    margin-right: 20%;
+}
+.fonttitle{
+    font-size: 24px;
+    font-weight: 600;
+}
+.colorbar{
+    display: flex;
+    margin-left: 10%;
+    margin-right: 10%;
+    gap: 10px;
+    justify-content: center;
+}
+.color1{
+    background-color: #6E8EAC;
+    height: 100px;
+    width: 100px;
+    border-radius: 5%;
+}
+.colorfont1{
+    color: #6E8EAC;
+}
+.colorfont2{
+    color: #000000;
+    font: bold;
+    background-color: #6E8EAC;
+    border-radius: 5%;
+}
+.color2{
+    background-color: #000000;
+    height: 100px;
+    width: 100px;
+    border-radius: 5%;
+    color: white;
+}
+
+.color3{
+    background-color: #E9B24C;
+    height: 100px;
+    width: 100px;
+    border-radius: 5%;
+}
+.colorfont3{
+    color: #E9B24C;
+
+}
+.color4{
+    background-color:  #03CC90;
+    height: 100px;
+    width: 100px;
+    border-radius: 5%;
+}
+.colorfont4{
+    color:  #03CC90;
+    background-color: #ddd6d1;
+    border-radius: 5%;
+}
+.color5{
+    background-color: #ddd6d1;
+    height: 100px;
+    width: 100px;
+    border-radius: 5%;
+}
+.colorfont5{
+    color: #ddd6d1;
+}
+.color6{
+    background-color:  #F0D1CD;
+    height: 100px;
+    width: 100px;
+    border-radius: 5%;
+}
+.colorfont6{
+    color:  #F0D1CD;
+}
