--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@
     display: flex;
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: 10px;
     gap: 10px;
     justify-content: center;
 }
