--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,9 @@
 /*Color Testing*/
 
 .textsize{
-    font-size: 40px;
+    font-size: 30px;
     margin: 40px;
-    margin-left: 30%;
-    margin-right: 20%;
+    text-align: center;
 }
 .fonttitle{
     font-size: 24px;
