--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,11 @@
     --main-callto: rgb(9, 167, 9);
 }
 
-p{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 24px;
-    line-height: 32px;
+body{
+    font-family: sans-serif;
+    font-size: 1.125rem;
+    line-height: 1.5;
     margin: 10px 0 10px 0;
-    
 }
 
 /*Navigation*/
