--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
 :root{
     /*Pendiente de Definir Variables Color*/
     --faded-denim: #6E8EAC;
-    --main-callto: rgb(9, 167, 9);
+    --main-callto: #FBB03FBB;
+    ;
 }
 
 body{
@@ -32,8 +33,8 @@ body{
     margin-left: 10%;
 }
 .icon{
-    height: 40px;
-    width: 40px;
+    height: 50px;
+
 }
 .nav-list{
     list-style: none;
