--- a/styles.css
+++ b/styles.css
@@ -254,3 +254,14 @@ span.boton_menu {
 .colorfont6{
     color:  #F0D1CD;
 }
+
+/*Contact Form Styles*/
+.contact {
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    margin: auto;
+    background-color: var(--faded-denim);
+    border-radius: 4px;
+    padding: 30px;
+}
