--- a/styles.css
+++ b/styles.css
@@ -317,11 +317,8 @@ textarea {
 footer{
     text-align: center;
     background-color: var(--faded-denim);
-    position: fixed;
-    bottom: 0;
     width: 100%;
-    height: 300px;
-    padding: 50px 0 50px 0;
+    padding: 50px 15px 50px 15px;
 }
 .subirlink{
     font-size: 30x;
