--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.aboutme {
+/* .aboutme {
     display: flex;
     flex-wrap: wrap;
 }
@@ -23,4 +23,4 @@
     flex-wrap: wrap;
 
     box-shadow: 1px 2px 3px grey;
-}
+} */
