--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,11 +1,17 @@
-/* Navbar */
-
 .nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
     background-color: var(--cultured);
-    padding: 10px 20px 10px 20px;
+    padding: 0 100px 0 100px;
+}
+
+.logotitle {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+
 }
 
 .ul {
@@ -13,34 +19,20 @@
 
 }
 
-/* .li a {
-    padding-right: 10px;
-    padding-bottom: 10px;
-    color: var(--darkColor);
-    text-decoration: none;
-    font-size: 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
 
 .li a:hover {
-    text-decoration: underline;
-    color: var(--highlight);
-    /* Tried to add an after instead of the hover */
-    /*     content: "";
-    width: 30%;
-    height: 2px;
-    background: var(--highlight);
-    position: absolute;
-    bottom: -4px;
-    left: 20px; */
+    border-bottom: 3px solid var(--mango);
+
 }
 
 .li {
     list-style: none;
     font-size: 25px;
     padding: 8px 5px 0px 10px;
+}
+
+.activelink {
+    border-bottom: 3px solid;
 }
 
 
@@ -51,20 +43,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /*
-    border-radius: 50%;
-    background-color: #283b8b;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-    /* positions the icon to the right and center aligns it vertically */
-    /* position: absolute;
-    top: 50%;
-    right: 25px;
-    transform: translateY(-50%);*/
     display: none;
 }
 
 @media screen and (max-width: 768px) {
+    .nav {
+        padding: 10px 20px 10px 20px;
+    }
+
     .icon {
         display: flex;
         align-items: center;
@@ -80,26 +66,34 @@
     .ul {
         display: flex;
         position: absolute;
-        top: 80px;
-        left: -35px;
+        top: 64px;
+        left: 0px;
         flex-direction: column;
         margin: 0px;
+        width: 100vw;
+        background-color: white;
     }
+
 
     .hide {
         display: none;
     }
 
     .display {
+        z-index: 1;
         display: block;
-        background-color: red;
-        outline: 2px solid red;
+    }
+
+    .menuDisplay {
+        z-index: 1;
+        display: block;
+        border-bottom: 1px solid black;
+        border-top: 1px solid black;
+        padding: 2vh 0vh 2vh 0vh;
     }
 
     .li {
-        width: 90vw;
         display: flex;
-        background-color: white;
-        border-radius: 1px solid white;
+        padding-bottom: 3px;
     }
 }
