--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,67 +4,83 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* This class is applied to the Layout component: */
 
 .content {
-  max-width: 960px;
-  margin: 0 auto;
+    max-width: 960px;
+    margin: 0 auto;
 }
 
-
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+    html {
+        color-scheme: dark;
+    }
 
-  body {
-    color: white;
-    background: black;
-  }
+    body {
+        color: white;
+        background: black;
+    }
 }
 
 /*------ Fonts & Colors ------*/
 :root {
-  --raisin-black: #272727;
-  --mango: #F7B801;
-  --carolina-blue: #00A5E0;
-  --dim-gray: #696773;
-  --cultured: #EFF1F3;
+    --raisin-black: #272727;
+    --mango: #f7b801;
+    --carolina-blue: #00a5e0;
+    --dim-gray: #696773;
+    --cultured: #eff1f3;
+}
+
+h2 {
+    font-size: 25px;
+    padding: 10px 0 10px 0;
+}
+
+h3 {
+    font-size: 16px;
+}
+
+ul {
+    padding-left: 20px;
+}
+
+li {
+    list-style-type: circle;
 }
 
 /* Footer */
 
 footer {
-  text-align: center;
-  background-color: var(--cultured);
-  width: 100%;
-  padding: 50px 15px 50px 15px;
+    text-align: center;
+    background-color: var(--cultured);
+    width: 100%;
+    padding: 50px 15px 50px 15px;
 }
 
 .subirlink {
-  font-size: 30x;
-  color: #000000;
-  text-decoration: underline;
+    font-size: 30x;
+    color: #000000;
+    text-decoration: underline;
 }
 
 .imgblock {
-  padding: 30px 0 30px 0;
-  display: flex;
-  gap: 30px;
-  justify-content: center;
+    padding: 30px 0 30px 0;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
 }
