--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,20 +46,25 @@ a {
     --cultured: #eff1f3;
 }
 
-h2 {
-    font-size: 25px;
+/*------ Parsed Styles ------*/
+/* These styles are only used for the parsed Markdown for Articles.*/
+/* If you use double slash comment "//" the first style wont work. */
+.parsed h2 {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
     padding: 10px 0 10px 0;
 }
 
-h3 {
-    font-size: 16px;
+.parsed h3 {
+    font-size: 1.25rem;
+    line-height: 2.25rem;
+    padding: 10px 0 10px 0;
 }
 
-ul {
+.parsed ul {
     padding-left: 20px;
 }
-
-li {
+.parsed li {
     list-style-type: circle;
 }
 
